--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                 
 
-                <input class="btn" type="submit" value="Связаться">
+                <a href="mailto:vad-y-one@mail.ru"><input class="btn" type="submit" value="Связаться" ></a>
                 </form>
         </div>
 
